syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.User";
package CecoChat.Contracts.User;
import "Uuid.proto";

message Contact {
  int64 contact_user_id = 1;
  Uuid version = 2;
  ContactStatus status = 3;
}

enum ContactStatus {
  PENDING_REQUEST = 0;
  CANCELLED_REQUEST = 1;
  ESTABLISHED = 2;
  REMOVED = 3;
}
